--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>http://maven.apache.org</url>
     <properties>
         <java.version>21</java.version>
+        <argLine></argLine> <!-- Define a default JVM argument -->
     </properties>
     <dependencies>
         <dependency>
@@ -48,7 +49,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
+                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
                 </configuration>
             </plugin>
             <plugin>
