--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>partitioned-executor</name>
     <url>http://maven.apache.org</url>
+
     <properties>
         <java.version>21</java.version>
         <argLine></argLine> <!-- Define a default JVM argument -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
