--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-maven
 
       - name: Build with Maven
-        run: mvn clean install --batch-mode
+        run: mvn clean install -P release --batch-mode
 
       - name: Run tests
         run: mvn test
