Add Import GPG Key and GPG_PASSPHRASE environment variable to the build step in ci.yaml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,8 +35,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
+      - name: Import GPG key
+        run: |
+          echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
+
       - name: Build and Test with Maven
         run: mvn clean install -P release --batch-mode
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
   publish:
     needs: build
