Set version to 0.0.1 in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>xyz.petnil</groupId>
     <artifactId>partitioned-executor</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>partitioned-executor</name>
     <url>http://maven.apache.org</url>
 
